--- a/docroot/themes/custom/limestone/scss/layout/_off-canvas.scss
+++ b/docroot/themes/custom/limestone/scss/layout/_off-canvas.scss
@@ -4,7 +4,7 @@
 }
 #top-off-canvas-search {
   padding-top: rem-calc(85);
-
+  padding-bottom: rem-calc(33);
   > div {
     @extend .grid-container;
   }
